# ProceduralPlanets

./: .gitignore  Doxyfile  README.md
docs/: main.tex
src/: CMakeLists.txt  ImportQGLViewer.cmake  Main.cpp  Mesh.hpp  Noise.cpp  Planet.cpp  Planet.h  Planet.hpp  PlanetDockWidget.cpp  PlanetDockWidget.h  PlanetDockWidget.hpp  PlanetViewer.cpp  PlanetViewer.h  PlanetViewer.hpp  PlanetViewer2.cpp  PlanetViewer2.hpp  Plate.hpp  ProceduralPlanet.pro  Shader.h  Window.cpp  Window.h  Window.hpp  output
src/GLSL/shaders/: ocean.frag  ocean.vert  planet.frag  planet.vert  simple.frag  simple.vert  skybox.frag  skybox.vert
src/res/icons/: continent.png~
